Remove comment in Changes about Windows updates because they don't work because libarchive-static doesn't correctly report whether a file is a symlink or not.
Started working on getting updated version of libarchive-static, but was
running into problems and decided it wasn't worth the effort right now.

--- a/Changes
+++ b/Changes
@@ -1,9 +1,6 @@
 v0.2.6.beta.2
 
-  Miscellaneous:
-
-  - On Windows, contents of archives are checked for special file types
-    (symlinks, pipes, etc.) so that better error messages can be produced.
+xxxxxxxx
 
 v0.2.6.beta.1
 
