--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ v1.0.1.beta.1
 
   Backwards incompatibilities:
 
+  - Package names and versions and config names can no longer be "." or "..".
+    Attempting to use one of these would produce bad effects before, so this
+    should not be a big deal.
+
   - The FIG_USERNAME and FIG_PASSWORD environment variables take precedence
     over values in ~/.netrc.  This is a better fit with the general *nix idea
     that the command-line should take precedence over the environment which
