Graphviz support for --list-variables.

--- a/Changes
+++ b/Changes
@@ -1,3 +1,16 @@
+v1.0.1.beta.2
+
+  New features:
+
+  - Graphviz (http://graphviz.org/) output for --list-dependencies and
+    --list-variables via --graphviz option.  You'll need something that can interpret .dot files to use this.
+
+      fig package/v1.2.3 --list-dependencies --graphviz | dot -Tpng -o package-1.2.3.png
+      fig package/v1.2.3 --list-variables --list-all-configs --graphviz | dot -Tpng -o package-1.2.3.png
+
+    Since Fig just emits DOT (http://graphviz.org/content/dot-language), Fig
+    doesn't have a dependency upon Graphviz libraries, etc.
+
 v1.0.1.beta.1
 
   Backwards incompatibilities:
