--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+v1.1.1.beta.5
+
+  Miscellaneous:
+
+  - Login behavior change for FTP with --login and for SFTP: Will not attempt
+    to use login credentials from FIG_USERNAME/FIG_PASSWORD or prompting for
+    asset URLs.  Credentials in ~/.netrc will continue to be used.
+
 v1.1.1.beta.4
 
   Bug fix:
