--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 v1.1.1.beta.5
 
+  Bug fix:
+
+  - Fix "include :config-with-no-package" in packages referenced by
+    "include-file".
+
   Miscellaneous:
 
   - Login behavior change for FTP with --login and for SFTP: Will not attempt
