Handle newlines in command-line values.

--- a/Changes
+++ b/Changes
@@ -1,13 +1,15 @@
 v1.2.1.beta.2
 
+  Backwards incompatibility:
+
+  - If you specify one of FIG_USERNAME/FIG_PASSWORD, you must specify both.
+
   Bug fixes:
 
   - In the change to not use the environment variables/prompting for assets,
     ~/.netrc gained priority over the environment variables again. Fixed.
 
-  Backwards incompatibility:
-
-  - If you specify one of FIG_USERNAME/FIG_PASSWORD, you must specify both.
+  - Newlines are allowed in command-line options.
 
 v1.2.1.beta.1
 
