--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ v1.3.1.beta.1
 
   Miscellaneous:
 
+  - Small clarification in error message when failing to download an asset.
+
   - No longer depends upon the sys-admin gem.
 
 v1.3.0
