--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-v1.4.1.beta.1 - 2013/4/4
+v1.5.0 - 2013/4/8
 
   Bug fix:
 
@@ -13,6 +13,11 @@ v1.4.1.beta.1 - 2013/4/4
   - json gem dependency is now 1.7.7.  Needed for Ruby v2 and whatever issue
     TeamCity was having with versions later than 1.6.5 a year ago does not
     appear to exist with 1.7.7.
+
+
+v1.4.1.beta.1 - 2013/4/4
+
+  - Test release.
 
 
 v1.4.0 - 2013/3/18
