--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+v1.7.0 - 2013/6/5
+
+  Miscellaneous:
+
+  - No functional changes, just updated gem dependencies.
+
 v1.6.0 - 2013/4/22
 
   New feature:
