--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+v1.9.0 - 2013/09/19
+
+  Bug fixes:
+
+  - You can now set FIG_SVN_EXECUTABLE and FIG_GIT_EXECUTABLE to whitespace to
+    turn off support for those VCSs.  Windows does not allow environment
+    variables to be set to the empty string.
+
 v1.8.0 - 2013/8/6
 
   Bug fixes:
