"resource directory" will include the directory contents, not just the directory itself.

--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+v1.9.1.beta.1 - 2013/09/19
+
+  Miscellaneous:
+
+  - Resource statements that refer to directories will now pull in the full
+    directory contents instead of just the directory itself.
+
 v1.9.0 - 2013/09/19
 
   Bug fixes:
