--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+v1.9.1.beta.2 - 2013/09/xx
+
+  Bug fixes:
+
+  - Command statements were not being correctly published if they contained "@"
+    signs.
+
 v1.9.1.beta.1 - 2013/09/19
 
   Miscellaneous:
