--suppress-*-includes options now affect --include options.

--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+v1.11.1.beta.2 - 2013/10/11
+
+  Bug fixes:
+
+  - The --suppress-*-includes options didn't affect --include options.  Thanks
+    to Peter Royal for the report.
+
 v1.11.1.beta.1 - 2013/10/09
 
   Miscellaneous:
