--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+v1.x.x - 2013/x/x
+
+  Bug fixes:
+
+  - Incorrect message when the remote repository was empty when using
+    --list-remote.
+
 v1.12.0 - 2013/10/14
 
   Bug fixes:
