--- a/Changes
+++ b/Changes
@@ -4,13 +4,13 @@ v1.12.1.beta.1 - 2013/11/12
 
   - Now, modulo the value of the --update-lock-response option, always locks
     FIG_HOME.  This is to avoid corruption of the local copy of the remote
-    repository's figrc.
+    repository's figrc.  Thanks to James Fraser for the report.
 
   - Incorrect message when the remote repository was empty when using
     --list-remote.
 
-  - The "up-to-date" check for files accessed via ftp, file, and sftp URLs now
-    includes a size check.
+  - The "up-to-date" check for files accessed via ftp:, file:, and sftp: URLs
+    now includes a size check.
 
 v1.12.0 - 2013/10/14
 
