--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-v1.12.1.beta.1 - 2013/11/12
+v1.13.0 - 2013/12/3
 
   Bug fixes:
 
@@ -11,6 +11,10 @@ v1.12.1.beta.1 - 2013/11/12
 
   - The "up-to-date" check for files accessed via ftp:, file:, and sftp: URLs
     now includes a size check.
+
+v1.12.1.beta.1 - 2013/11/12
+
+  - Test release.
 
 v1.12.0 - 2013/10/14
 
