--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+v1.13.1.beta.1 - 2014/1/30
+
+  New features:
+
+  - The return of SSH support, thanks to Alexey Klimkin.  Note that this uses
+    external "ssh" and "scp" commands locally and expects to be able to run
+    "find", "stat", and "mkdir" remotely.
+
 v1.13.0 - 2013/12/3
 
   Bug fixes:
