--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+v1.15.1.beta.1 - 2014/3/5
+
+  Miscellaneous:
+
+  - Work around broken utmp files by looking at the LOGNAME and USER
+    environment variables to get the current user before falling back on
+    getlogin().
+
 v1.15.0 - 2014/2/24
 
   Miscellaneous:
