--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+v1.16.1.beta.1 - 2014/4/29
+
+  Miscellaneous:
+
+  - Unused retrieve warnings are suppressed when other errors occur.
+
 v1.16.0 - 2014/3/19
 
   Miscellaneous:
