Make minimum requirement for libarchive-static be v1.0.5.

--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+v1.19.0 - 2014/9/26
+
+  Miscellaneous:
+
+  - Minimum version of libarchive-static is now v1.0.5.
+
+  - There's no specific changes being made to prevent continued compatibility,
+    but Fig is no longer going to be tested on Ruby v1.9.2.
+
 v1.18.0 - 2014/7/1
 
   New features:
