--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+v1.20.0 - 2014/10/x
+
+  New features:
+
+  - New --no-remote-figrc option that suppresses looking at
+    $FIG_REMOTE_URL/_meta/figrc.
+
 v1.19.0 - 2014/9/26
 
   Miscellaneous:
