--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+v1.20.1.beta.1 - 2014/10/x
+
+  Bug fixes:
+
+  - During publishing, now checks asset names after file name globbing, not
+    before.  Also, archive names are checked for extraction support prior to
+    writing to remote repository.  (Yes, that's the archive /names/ and not the
+    archive /files/.)
+
 v1.20.0 - 2014/10/7
 
   New features:
