Eliminate stack trace when releasing repository lock after exec failure.

--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+v1.xx - 2014/xx/xx
+
+  Miscellaneous:
+
+  - Eliminate stack trace when releasing repository lock after exec error.
+
 v1.21.0 - 2014/10/13
 
   Bug fixes:
