Split --options/--help-long output up into sections.

--- a/Changes
+++ b/Changes
@@ -9,7 +9,10 @@ v1.xx - 2014/xx/xx
 
   - Include file size in checks for whether a local file is up-to-date for
     copying.
-  - Eliminate stack trace when releasing repository lock after exec error.
+  - Command-line options listing in --options and --help-long output is now
+    broken up into sections.
+  - Stack trace no longer emitted when releasing repository lock after exec
+    error.
 
 v1.21.0 - 2014/10/13
 
