--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+v1.xx.xx - xxxx/xx/xx
+
+  Miscellaneous:
+
+  - More tweaks of --options and --help-long output.
+
 v1.22.0 - 2014/11/20
 
   New features:
