Upgrade gem dependencies.

--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ v1.xx.xx - xxxx/xx/xx
   Miscellaneous:
 
   - More tweaks of --options and --help-long output.
+  - Upgraded dependencies.
 
 v1.22.0 - 2014/11/20
 
